--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark px-4">
       <a class="navbar-brand" href="#">Ricky Kuang</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="fas fa-bars"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar-items">
@@ -26,7 +26,7 @@
           <a class="nav-item nav-link" href="#">Portfolio</a>
           <a class="nav-item nav-link" href="#">Contact</a>
         </div>
-      </div>
+      </div> -->
     </nav>
 
     <div class="header">
