learn more link added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,16 +33,13 @@
       <div class="header-inner">
         <h1>Hello, World!</h1>
         <p>Welcome to my website!</p>
-        <!-- <form method="get" action="{{ url_for('static', filename='rkuang-resume.pdf') }}">
-          <button type="submit" class="btn btn-danger">
-            <span class="fas fa-cloud-download-alt"></span>
-            Resume
-          </button>
-        </form> -->
         <a class="btn btn-danger" href="{{ url_for('static', filename='rkuang-resume.pdf') }}" download="rkuang-resume.pdf">
           <span class="fas fa-cloud-download-alt"></span>
           Resume
         </a>
+      </div>
+      <div class="learn_more">
+        <a href=#footer>Learn More</a>
       </div>
     </div>
 
