--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -49,17 +49,17 @@ body {
   margin-top: -51px;
   text-align: center;
   position: relative;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 0.225em;
+  left: 50%;
 }
 
   .header .header-inner {
-    color: white;
-    text-transform: uppercase;
-    letter-spacing: 0.225em;
     /*padding: 200px 0;*/
     margin: 0;
     position: absolute;
     top: 55%;
-    left: 50%;
     transform: translate(-50%, -50%);
   }
 
@@ -83,6 +83,20 @@ body {
       font-size: 0.9em;
       letter-spacing: 0.225em;
       background-color: rgb(255, 61, 61)
+    }
+
+  .header .learn_more {
+    position: absolute;
+    bottom: 30px;
+    transform: translate(-50%, -50%);
+  }
+
+    .header .learn_more a {
+      color: white;
+    }
+
+    .header .learn_more a:hover {
+      text-decoration: none;
     }
 
 
