make learn more link more visually appealing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -87,8 +87,9 @@ body {
 
   .header .learn_more {
     position: absolute;
-    bottom: 30px;
+    bottom: 10%;
     transform: translate(-50%, -50%);
+    font-size: 0.85em;
   }
 
     .header .learn_more a {
