--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,9 @@
     <div class="header">
       <div class="header-inner">
         <h1>Hello, World!</h1>
-        <p>Welcome to my website!</p>
+        <p>Ricky Kuang<br />
+        Software Engineer<br />
+        Welcome to my website!</p>
         <a class="btn btn-danger" href="{{ url_for('static', filename='rkuang-resume.pdf') }}" download="rkuang-resume.pdf">
           <span class="fas fa-cloud-download-alt"></span>
           Resume
