--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,11 +29,10 @@
       </div> -->
     </nav>
 
-    <div class="header">
+    <div id="header">
       <div class="header-inner">
-        <h1>Hello, World!</h1>
-        <p>Ricky Kuang<br />
-        Software Engineer<br />
+        <h1>Ricky Kuang</h1>
+        <p>Hello, World!<br />
         Welcome to my website!</p>
         <a class="btn btn-danger" href="{{ url_for('static', filename='rkuang-resume.pdf') }}" download="rkuang-resume.pdf">
           <span class="fas fa-cloud-download-alt"></span>
@@ -41,7 +40,18 @@
         </a>
       </div>
       <div class="learn_more">
-        <a href=#footer>Learn More</a>
+        <a href=#about>Learn More<br />
+        <i class="fas fa-angle-down"></i>
+        </a>
+      </div>
+    </div>
+
+    <div id="about">
+      <div class="avatar">
+        <img src="{{ url_for('static', filename='avatar.jpg') }}"/>
+      </div>
+      <div class="summary">
+        <h4>summary</h4>
       </div>
     </div>
 
@@ -51,7 +61,7 @@
         <li><a href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a></li>
         <li><a href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a></li>
       </ul>
-
+      <br />
       Ricky Kuang
     </footer>
 
