--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,11 +1,10 @@
 html, body {
   height: 100%;
   font-family: 'Open Sans', sans-serif;
-  background-color: #1d242a;
 }
 
 body {
-  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../banner.jpg");
+  background-image: url("../banner.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -18,6 +17,7 @@ body {
 .navbar {
   padding: 10px!important;
   font-weight: 800;
+  z-index: 1;
 }
 
   .navbar-brand {
@@ -48,6 +48,7 @@ body {
   margin-top: -51px;
   text-align: center;
   position: relative;
+  background-color: rgba(38, 51, 51, 0.3);
 }
 
   #header .header-inner {
@@ -126,9 +127,21 @@ body {
     padding: 50px 100px;
   }
 
+    #about .summary h1 {
+      font-size: 1.60em;
+      font-weight: 800;
+      line-height: 1.75em;
+    }
+
+    #about .summary p {
+      color: rgba(255, 255, 255, 0.70);
+      text-transform: none;
+      line-height: 1.8em;
+    }
+
 #footer {
-  padding: 4em 0 4em 0 ;
-  background-color: #1d242a;
+  padding: 150px 0;
+  background-color: rgba(38, 51, 51, 0.7);
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
 }
