added template text in about me section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,7 +51,9 @@
         <img src="{{ url_for('static', filename='avatar.jpg') }}"/>
       </div>
       <div class="summary">
-        <h4>summary</h4>
+        <h1>About me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora provident impedit nostrum iure tempore pariatur ratione hic fugiat, assumenda, architecto porro. Minus voluptatum consectetur nulla aliquam explicabo et sit voluptas!</p>
+        <!-- <p>Nice to meet you! My name is Ricky Kuang, and I am aspiring software engineer.</p> -->
       </div>
     </div>
 
