--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,8 +52,14 @@
       </div>
       <div class="summary">
         <h1>About me</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora provident impedit nostrum iure tempore pariatur ratione hic fugiat, assumenda, architecto porro. Minus voluptatum consectetur nulla aliquam explicabo et sit voluptas!</p>
-        <!-- <p>Nice to meet you! My name is Ricky Kuang, and I am aspiring software engineer.</p> -->
+        <p>Hi there! My name is Ricky Kuang. I have recently 
+          graduated from UC Santa Barbara with a major in 
+          Computer Science and a minor in Statistical 
+          Science, and I am an aspiring Software Engineer. <br /> <br />
+          This website is a work in progress, so please 
+          come back every once in a while to check out 
+          what I'm working on!
+        </p>
       </div>
     </div>
 
@@ -67,13 +73,14 @@
       Ricky Kuang
     </footer>
 
-    <!-- Custom JavaScript -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
+    <!-- Custom JavaScript -->
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   </body>
 </html>
