--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -108,7 +108,7 @@ body {
   display: block;
   background-color: #505393;
   width: 100%;
-  padding: 5% 10%;
+  padding: 10% 10%;
   font-size: .8em;
 }
 
@@ -128,13 +128,14 @@ body {
     }
 
   #about .summary {
-    padding: 5% 5%;
+    padding: 2.5% 5%;
   }
 
     #about .summary h1 {
       font-size: 1.60em;
       font-weight: 800;
-      line-height: 1.75em;
+      line-height: 2.2em;
+      text-align: center;
     }
 
     #about .summary p {
@@ -190,17 +191,16 @@ body {
 }
 
 @media (min-width: 768px) {
-  #about {
-    font-size: 1em;
-  }
-
   .bg-dark {
     background-color: transparent!important;
-    /*background-color: rgba(0, 0, 0, 0.25)!important;*/
   }
-
+  
   #header .header-inner h1 {
     font-size: 2em;
+  }
+
+  #about {
+    font-size: 1em;
   }
 }
 
@@ -225,13 +225,10 @@ body {
     }
   
       #about .summary h1 {
-        font-size: 1.60em;
-        font-weight: 800;
-        line-height: 1.75em;
+        text-align: left;
       }
   
       #about .summary p {
         text-transform: none;
-        line-height: 1.8em;
       }
 }
