--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,18 +15,18 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark px-4">
-      <a class="navbar-brand" href="#">Ricky Kuang</a>
-      <!-- <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-fixed-top navbar-expand-md navbar-dark bg-dark">
+      <a class="navbar-brand" href="#header">Ricky Kuang</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="fas fa-bars"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar-items">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="#">About</a>
+          <a class="nav-item nav-link" href="#about">About</a>
           <a class="nav-item nav-link" href="#">Portfolio</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link" href="#footer">Contact</a>
         </div>
-      </div> -->
+      </div>
     </nav>
 
     <div id="header">
@@ -69,7 +69,6 @@
         <li><a href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a></li>
         <li><a href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a></li>
       </ul>
-      <br />
       Ricky Kuang
     </footer>
 
