--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,6 @@
 html, body {
-  height: 100%;
   font-family: 'Open Sans', sans-serif;
+  background-color: #1d242a;
 }
 
 body {
@@ -12,6 +12,12 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.25em;
   color: white;
+  transition: 2s opacity;
+  opacity: 0;
+}
+
+.load {
+  opacity: 1;
 }
 
 .navbar {
@@ -46,7 +52,7 @@ body {
 
 
 #header {
-  height: 100%;
+  height: 100vh;
   text-align: center;
   position: relative;
   background-color: rgba(38, 51, 51, 0.35);
