fixed position navbar

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,9 +65,9 @@
 
     <footer id="footer">
       <ul class="icons">
-        <li><a href="https://github.com/rkuang/" class="fab fa-github"></a></li>
-        <li><a href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a></li>
-        <li><a href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a></li>
+        <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/" class="fab fa-github"></a></li>
+        <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a></li>
+        <li><a target="_blank" rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a></li>
       </ul>
       Ricky Kuang
     </footer>
