--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-  background-image: url("../banner.jpg");
+  background-image: url("../../images/banner.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
