--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,18 +163,48 @@ body {
       margin-bottom: 0;
     }
 
-
 #projects {
-  display: flex;
-  flex-direction: row;
   background-color: #2e3842;
-  height: 80vh;
 }
+
+  .project {
+    display: flex;
+    align-items: center;
+  }
+
+  .project {
+    width: 100%;
+  }
+
+    .project .image {
+      width: 40%;
+    }
+
+    .project .image img {
+      width: 100%;
+    }
+
+    .project .text {
+      padding: 2em;
+      width: 60%;
+    }
+
+  .project:nth-child(2n) {
+    flex-direction: row-reverse;
+  }
+
+  .project:nth-child(1) {
+    background-color: rgba(0, 0, 0, 0.075);
+  }
+
+  .project:nth-child(2) {
+    background-color: rgba(0, 0, 0, 0.15);
+  }
 
 
 #gap {
   background-color: rgba(38, 51, 51, 0.35);
-  height: 40vh;
+  padding: 2em;
 }
 
 #footer {
