--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
   transition-property: opacity;
   transition-delay: 1s;
   transition-duration: 3s;
-  opacity: 1;
+  opacity: 0;
 }
 
 .load {
@@ -166,7 +166,7 @@ body {
     padding: 2.5%;
   }
 
-    #about .summary h1 {
+    #about .summary h2 {
       font-size: 1.60em;
       font-weight: 800;
       line-height: 2.2em;
@@ -236,7 +236,7 @@ body {
   }
 
 
-#gap {
+#thankyou {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -244,19 +244,19 @@ body {
   padding: 5% 20%;
 }
 
-  #gap .gap-text {
+  #thankyou .thankyou-text {
     padding-right: 50px;
     display: block;
     flex-grow: 2;
   }
 
-  #gap .gap-buttons {
+  #thankyou .thankyou-buttons {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
   }
 
-    #gap .gap-buttons a {
+    #thankyou .thankyou-buttons a {
       width: 200px;
     }
 
@@ -266,10 +266,37 @@ body {
       color: white;
     }
 
-    #gap a:hover {
+    #thankyou a:hover {
       color: white;
       opacity: 0.7;
     }
+
+  @media (max-width: 980px) {
+
+    #thankyou {
+      display: block;
+      padding: 5% 10%;
+    }
+
+    #thankyou .thankyou-text {
+      padding: 0 0 20px 0;
+      text-align: center;
+    }
+
+    #thankyou .thankyou-buttons {
+      flex-direction: row;
+    }
+  }
+
+  @media (max-width: 600px) {
+
+    #thankyou .thankyou-buttons {
+      height: 100px;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
 
 #footer {
   padding: 7% 0 5% 0;
@@ -360,7 +387,7 @@ body {
       margin: auto 0;
     }
   
-      #about .summary h1 {
+      #about .summary h2 {
         text-align: left;
       }
   
