added thank you styles for tablet form factor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ a:hover {
   transition: transform .3s;
   transform: translate(0, -1px);
   text-decoration: none;
+  color: white;
   opacity: 0.7;
 }
 
@@ -50,7 +51,8 @@ body {
   transition: background-color 0.5s;
   width: 100%;
   position: fixed;
-  padding: 10px!important;
+  padding: 5px!important;
+
   font-weight: 800;
   z-index: 1;
 }
@@ -96,25 +98,34 @@ body {
     border: none;
   }
 
+  @media (max-width: 768px) {
+    .navbar {
+      background-color: #1d242a;
+    }
+  }
+
 
 #header {
   display: flex;
   flex-direction: column;
   height: 100vh;
   text-align: center;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
   background-color: rgba(38, 51, 51, 0.35);
 }
 
-  #header .header-inner {
-    position: relative;
+  .header-text {
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
-    #header .header-inner h1 {
-      display: inline-block;
+    .header-text h1 {
       font-size: 1.5em;
       letter-spacing: 0.5em;
-      margin-bottom: 30px;
 
       /* Border */
       border-style: solid none solid none;
@@ -123,29 +134,25 @@ body {
       padding-left: 35px;
     }
 
-    #header .header-inner p {
+    .header-text p {
+      margin-top: 5%;
+      text-align: center;
       text-transform: uppercase;
-      margin-bottom: 50px;
       line-height: 2em;
     }
 
-    #header .header-inner .btn {
+    .header-text .btn {
+      margin-top: 5%;
       padding: 8px 30px;
       font-size: 0.9em;
       letter-spacing: 0.4em;
-      margin-bottom: 4.2em;
     }
 
   #header #learn_more {
-    position: absolute;
-    bottom: 10%;
-    left: 50%;
-    width: 10em;
-    margin-left: -5em;
+    margin-top:
+    text-align: center;
     font-size: 0.85em;
     line-height: 2.5em;
-    color: white!important;
-    /* text-decoration: none!important; */
   }
 
   #header #learn_more:hover {
@@ -263,7 +270,7 @@ body {
 
 #thankyou {
   width: 100%;
-  padding: 50px 0;
+  padding: 50px;
   background-color: rgba(38, 51, 51, 0.35);
   align-content: center;
   align-items: normal;
@@ -294,31 +301,22 @@ body {
       opacity: 0.7;
     }
 
-  @media (max-width: 980px) {
-
-    #thankyou {
-      display: block;
-      padding: 5% 10%;
-    }
-
-    #thankyou .thankyou-text {
-      padding: 0 0 20px 0;
-      text-align: center;
-    }
-
-    #thankyou .thankyou-buttons {
-      flex-direction: row;
-    }
-  }
-
-  @media (max-width: 600px) {
-
-    #thankyou .thankyou-buttons {
-      height: 100px;
+  @media (max-width: 768px) {
+    #thankyou .content-wrapper {
       flex-direction: column;
-      justify-content: space-between;
       align-items: center;
     }
+
+      .thankyou-text {
+        text-align: center;
+        width: 100%;
+      }
+
+      .thankyou-buttons {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-evenly;
+      }
   }
 
 #footer {
