--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,6 +302,10 @@ body {
     }
 
   @media (max-width: 768px) {
+    #thankyou {
+      padding: 50px 20px;
+    }
+
     #thankyou .content-wrapper {
       flex-direction: column;
       align-items: center;
@@ -317,6 +321,19 @@ body {
         flex-direction: row;
         justify-content: space-evenly;
       }
+  }
+
+  @media (max-width: 600px) {
+    /* .thankyou-text {
+      text-align: start;
+    } */
+
+    .thankyou-buttons {
+      height: 92px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
 #footer {
