--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ body {
 .content-wrapper {
   display: flex;
   flex-direction: inherit;
-  justify-content: center;
+  justify-content: inherit;
   align-items: inherit;
   align-content: inherit;
   width: 1200px;
@@ -185,6 +185,7 @@ body {
   padding: 50px 0;
   width: 100%;
   background-color: #505393;
+  justify-content: center;
   align-items: center;
   align-content: normal;
 }
@@ -213,7 +214,6 @@ body {
     }
 
 #projects {
-  display: none;
   background-color: #2e3842;
   flex-direction: column;
 }
@@ -241,13 +241,13 @@ body {
     flex-direction: row-reverse;
   }
 
-  /* .project:nth-child(1) {
+  .project:nth-child(1) {
     background-color: rgba(0, 0, 0, 0.075);
   }
 
   .project:nth-child(2) {
     background-color: rgba(0, 0, 0, 0.15);
-  } */
+  }
 
   @media (max-width: 980px) {
 
@@ -274,6 +274,7 @@ body {
   width: 100%;
   padding: 50px;
   background-color: rgba(38, 51, 51, 0.35);
+  justify-content: center;
   align-content: center;
   align-items: normal;
 }
@@ -335,40 +336,48 @@ body {
   }
 
 #footer {
-  padding: 7% 0 5% 0;
-  background-color: rgba(38, 51, 51, 0.7);
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  
+  height: 100px;
+  padding: 25px;
+  background-color: rgba(38, 51, 51, 0.85);
   color: rgba(255, 255, 255, 0.5);
-  line-height: 3em;
 }
 
   #footer .icons {
-    font-size: 1.25em;
+    display: flex;
+    width: 170px;
+    justify-content: space-between;
   }
 
     #footer .icons a {
+      font-size: 1.5em;
       color: rgba(255, 255, 255, 0.5);
     }
 
     #footer .icons a:hover {
+      text-decoration: none;
       color: white;
     }
 
-.icons {
-  padding-left: 0px;
-}
-
-  .icons li {
-    display: inline;
-    list-style-type: none;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 1.50em;
+  #footer p {
+    margin-bottom: 0;
   }
 
-    .icons li a:hover {
-      text-decoration: none;
+  @media (max-width: 768px) {
+    #footer {
+      height: 200px;
+      flex-direction: column;
+      justify-content: center;
     }
+
+    #footer .icons {
+      margin-bottom: 30px;
+    }
+  }
 
 /* @media (min-width: 500px) {
   #about {
